conduit/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conduit
  namespace: conduit
  annotations:
      reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: conduit
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: conduit
        name: conduit
    spec:
      containers:
      - name: conduit
        image: matrixconduit/matrix-conduit:latest
        imagePullPolicy: Always
        ports:
          - name: federation
            containerPort: 6167
        volumeMounts:
          - name: storage
            mountPath: /var/lib/matrix-conduit
          - name: config
            mountPath: /srv/conduit/conduit.toml
            subPath: config.toml
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: conduit-pvc
        - name: config
          configMap:
            name: config
