conduit/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: federation
  namespace: conduit
spec:
  selector:
    app: conduit
  ports:
    - name: federation
      protocol: TCP
      port: 6167
      targetPort: 6167
